[package]
name = "mqtt-cli"
version = "0.1.0"
authors = ["Thorsten Frank <github@tfsw.de>"]
description = "MQTT command-line client"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["mqtt", "messaging", "cli"]
categories = ["network-programming"]
repository = "https://github.com/thorstenfrank/rust-mqtt"
edition = "2021"

[dependencies]
mqtt = { path = "../mqtt"}
clap = { version = "4", features = ["derive"]}